codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_shows_stale_limits_message.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭────────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v1.7.5)                                      │
│                                                                │
│ 访问 https://chatgpt.com/codex/settings/usage 获取最新的       │
│ 速率限制与额度信息                                             │
│                                                                │
│  模型:          gpt-5.1-codex-max (推理 none, 摘要 auto)       │
│  目录:          /workspace/tests                               │
│  审批:          on-request                                     │
│  沙箱:          read-only                                      │
│  Agents.md:     无                                             │
│                                                                │
│  Token 使用:    1.9K 总计 （1K 输入 + 900 输出）               │
│  上下文窗口:    剩余 100%（2.25K 已用 / 272K）                 │
│  5h 限额:       [██████░░░░░░░░░░░░░░] 剩余 28% （03:14 重置） │
│  Weekly 限额:   [████████████░░░░░░░░] 剩余 60% （03:34 重置） │
│  警告:          限额数据可能已过期，请开始新的对话刷新。       │
╰────────────────────────────────────────────────────────────────╯
